fix Scala client