@@ -10,3 +10,8 @@ libraryDependencies ++= Seq(
   "org.apache.arrow" % "flight-sql-jdbc-driver" % "18.1.0",
   "org.slf4j" % "slf4j-simple" % "2.0.16"
 )
+
+
+run / javaOptions += "--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED"
+run / javaOptions += "--add-opens=java.base/java.lang=ALL-UNNAMED"
+run / fork := true
